    (Ben Mabey)
    * you can now say "spec some_spec.rb:12" in addition to "spec some_spec.rb
      --line 12"
  * changed add_example_group to example_group_started in formatters
    * example_group_started is an alias for now, so nothing should break
    * will deprecate eventually, so if you have custom formatters, we
      recommend making the change now.

* bug fixes

  * support expectations on DelegateClass (Clifford T. Matthews). Closes #48.

=== Version 1.2.2 / 2009-03-22

Bug-fix release (fixes regression introduced in 1.2.1)

* bug fixes 

  * fixed bug in which spec_parser raised an error for custom example group     
    base classes

=== Version 1.2.1 / 2009-03-22

This is a bug-fix release, recommended for anybody who has already upgraded to
rspec-1.2.0.

See Upgrade.rdoc for information about upgrading to rspec-1.2.1

* enhancements

  * matchers, including the new DSL, easily added to your test/unit tests
  * added support for 0 to n args in matcher DSL
  * restored loading rubygems when necessary
    * if you really don't want to use rubygems, you
      can set an NO_RUBYGEMS environment
      variable, and RSpec won't force it on you.
  * added -u/--debugger option (Rick DeNatale) #262.
    * just add "debugger" anywhere in your code and run spec path/to/code --debugger
  * rename ExampleDescription to ExampleProxy
  * pass ExampleProxy to example_started(). Closes #738, #743
    * thanks to Tobias Grimm (Eclipse) fort the patch and Roman Chernyatchik
      (JetBrains, RubyMine) for the assist
  
* bug fixes

  * subject (implicit or explicit) is now properly inherited by nested groups. Closes #744.

=== Version 1.2.0 / 2009-03-15

* warnings:

  * If you use the ruby command to run specs instead of the spec command, you'll
    need to require 'spec/autorun' or they won't run. This won't affect you if
    you use the spec command or the Spec::Rake::SpecTask that ships with RSpec.
