@@ -2,16 +2,15 @@ module Spec
   module Example      
     module Pending
       def pending(message = "TODO")
-        pending_caller = caller[0]
         if block_given?
           begin
             yield
-          rescue Exception => e
-            raise Spec::Example::ExamplePendingError.new(message, pending_caller)
+          rescue Exception
+            raise Spec::Example::ExamplePendingError.new(message)
           end
           raise Spec::Example::PendingExampleFixedError.new("Expected pending '#{message}' to fail. No Error was raised.")
         else
-          raise Spec::Example::ExamplePendingError.new(message, pending_caller)
+          raise Spec::Example::ExamplePendingError.new(message)
         end
       end
     end
