@@ -86,7 +86,7 @@ module Spec
           @output.flush
         end
 
-        def example_pending(example, message, pending_location)
+        def example_pending(example, message, deprecated_pending_location=nil)
           @output.puts "    <script type=\"text/javascript\">makeYellow('rspec-header');</script>" unless @header_red
           @output.puts "    <script type=\"text/javascript\">makeYellow('example_group_#{example_group_number}');</script>" unless @example_group_red
           move_progress
