@@ -14,7 +14,7 @@ module Spec
           @output.flush
         end
       
-        def example_pending(example, message, pending_location)
+        def example_pending(example, message, deprecated_pending_location=nil)
           super
           @output.print yellow('*')
           @output.flush
