@@ -26,7 +26,7 @@ module Spec
         if error.nil?
           example_passed(example)
         elsif Spec::Example::ExamplePendingError === error
-          example_pending(example, error.pending_caller, error.message)
+          example_pending(example, example.location, error.message)
         else
           example_failed(example, error)
         end
@@ -105,29 +105,29 @@ module Spec
 
       EXAMPLE_PENDING_DEPRECATION_WARNING = <<-WARNING
         DEPRECATION NOTICE: RSpec's formatters have changed example_pending
-        to accept three arguments instead of just two. Please see the rdoc
+        to accept two arguments instead of three. Please see the rdoc
         for Spec::Runner::Formatter::BaseFormatter#example_pending
         for more information.
           
-        Please update any custom formatters to accept the third argument
+        Please update any custom formatters to accept only two arguments
         to example_pending. Support for example_pending with two arguments
-        and this warning message will be removed after the RSpec 1.1.5 release.
+        and this warning message will be removed after the RSpec 2.0 release.
       WARNING
       
-      def example_pending(example, pending_caller, message="Not Yet Implemented")
+      def example_pending(example, ignore, message="Not Yet Implemented")
         @pending_count += 1
         formatters.each do |formatter|
           if formatter_uses_deprecated_example_pending_method?(formatter)
             Kernel.warn EXAMPLE_PENDING_DEPRECATION_WARNING
-            formatter.example_pending(example, message)
+            formatter.example_pending(example, message, example.location)
           else
-            formatter.example_pending(example, message, pending_caller)
+            formatter.example_pending(example, message)
           end
         end
       end
       
       def formatter_uses_deprecated_example_pending_method?(formatter)
-        formatter.method(:example_pending).arity == 2
+        formatter.method(:example_pending).arity == 3
       end
       
       class Failure
