@@ -97,7 +97,7 @@ EOE
           end
           example = example_group.examples.first
           file = __FILE__
-          line = __LINE__ + 2
+          line = __LINE__ - 5
           @formatter.add_example_group(Spec::Example::ExampleGroupProxy.new(example_group))
           @formatter.example_pending(example, "message", "#{__FILE__}:#{__LINE__}")
           @formatter.dump_pending
