@@ -10,6 +10,8 @@
     * example_group_started is an alias for now, so nothing should break
     * will deprecate eventually, so if you have custom formatters, we
       recommend making the change now.
+  * deprecated the third argument to example_pending. See
+    Spec::Runner::Formatter::BaseFormatter for more information.
 
 * bug fixes
 
